Update .gitignore to include media files and IDE configurations
- Added patterns to ignore JPEG images in the media directory.
- Included entries for virtual environment and IDE-specific files.
- Updated OS-specific ignore rules for macOS and Windows.

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,10 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+media/*.jpg
+media/*.jpeg
+media/*.JPG
+media/*.JPEG
 
 # Flask stuff:
 instance/
@@ -172,3 +176,18 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Virtual Environment
+venv/
+ENV/
+env/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
