--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,23 +8,42 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.8, 3.9, "3.10"]
 
     steps:
     - uses: actions/checkout@v4
+    
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'pip'
+    
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pytest pytest-django
+    
+    - name: Run Migrations
+      run: |
+        python manage.py makemigrations
+        python manage.py migrate
+    
     - name: Run Tests
+      env:
+        DJANGO_SETTINGS_MODULE: recognizing_famous_people.settings
+        SECRET_KEY: test-key
+        DEBUG: True
       run: |
         python manage.py test
+
+    - name: Check Code Style
+      run: |
+        pip install flake8
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
