Update GitHub Actions workflow to specify working directory for migrations and tests
- Added `working-directory` for the migration and test steps to ensure they run in the correct project context.
- This change improves the workflow's reliability by explicitly defining the directory for Django commands.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,11 +30,13 @@ jobs:
         pip install pytest pytest-django
     
     - name: Run Migrations
+      working-directory: recognizing_famous_people
       run: |
         python manage.py makemigrations
         python manage.py migrate
     
     - name: Run Tests
+      working-directory: recognizing_famous_people
       env:
         DJANGO_SETTINGS_MODULE: recognizing_famous_people.settings
         SECRET_KEY: test-key
