Add test directories in GitHub Actions workflow
- Introduced a new step to create test-results and coverage directories in the workflow.
- This enhancement ensures that test artifacts are organized and accessible for subsequent steps in the CI process.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -52,6 +52,13 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
+    - name: Create Test Directories
+      if: always()
+      working-directory: recognizing_famous_people
+      run: |
+        mkdir -p test-results/
+        mkdir -p coverage/
+
     - name: Upload Test Results
       if: always()
       uses: actions/upload-artifact@v3
