Update GitHub Actions workflow to ignore missing test and coverage directories
- Changed the behavior of the workflow to ignore missing test-results and coverage directories instead of throwing an error.
- This adjustment allows the workflow to proceed smoothly even if the specified directories are not present, enhancing flexibility in CI processes.

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -67,4 +67,4 @@ jobs:
         path: |
           recognizing_famous_people/test-results/
           recognizing_famous_people/coverage/
-        if-no-files-found: error
+        if-no-files-found: ignore
